--- a/WebContent/css/componentes.css
+++ b/WebContent/css/componentes.css
@@ -1,3 +1,18 @@
+
+/*--------------------*\
+         BASE
+\*--------------------*/
+html {
+  font-size: 62.5%; /* 10px */
+}
+
+body {
+  margin: 0;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.4rem;
+}
+
 /*--------------------*\
   BOTAO
 \*--------------------*/
@@ -14,7 +29,6 @@
   text-decoration: none;
 }
 
-
 .botao:hover, .botao:focus {
   background-color: #aaa;
   color: #fff;
@@ -23,7 +37,6 @@
 }
 
 .botao--principal {
- 
   border-radius: 10px;
 
   background-color: #004b86;
@@ -86,4 +99,77 @@
   background-color: #fff;
 
   font-size: 1.4rem;
+}
+
+/*--------------------*\
+        LAYOUT
+\*--------------------*/
+.layout-rodape {
+  margin-top: 10%;  
+  padding: 40px 0;
+
+  background-color: #484848;
+
+  color: #fff;
+  text-align: center;
+}
+.layout-cabecalho{
+  border-bottom: 1px solid #ccc;
+
+}
+
+/*--------------------*\
+        TABELA
+\*--------------------*/
+
+.tabela {
+  margin-right: 15%;
+  width: 100%;
+}
+
+.tabela td, .tabela th {
+  padding: 15px 10px;
+  border: 1px solid #ccc;
+}
+
+.tabela th {
+  background-color: #ececec;
+
+  font-size: 1.1em;
+  font-weight: bold;
+  text-align: left;
+}
+
+.tabela tr:nth-child(even) {
+  background-color: #f7f7f7;
+}
+
+.tabela tr:hover {
+  background-color: #faffcc;
+}
+.layout-rodape{
+  padding: 40px 0;
+  margin-top: 18%;
+
+  background-color: #484848;
+
+  color: #fff;
+  text-align: center;
+}
+
+.formulario-tabela{
+  padding: 0;
+  background-color: #cc;
+  margin-left: 30%;
+}
+
+/*--------------------*\
+        CHECKBOX
+\*--------------------*/
+
+.checkbox{
+
+  float: right;
+  margin-right: 100px;
+  margin-top: 10px;
 }
